removing python version spec

--- a/Infra-provisioning/Dynamic-agent-creation/azure-pipeline.yaml
+++ b/Infra-provisioning/Dynamic-agent-creation/azure-pipeline.yaml
@@ -43,10 +43,10 @@ jobs:
     demands:
     - agent.name -equals my-agent-$(InstanceID)
   steps:
-    - task: UsePythonVersion@0
-      inputs:
-        versionSpec: '3.x'  # Usar versão adequada do Python
-        addToPath: true
+    # - task: UsePythonVersion@0
+    #   inputs:
+    #     versionSpec: '3.x'  # Usar versão adequada do Python
+    #     addToPath: true
     - script: |
         pip3 install -r requirements.txt
         python /home/ubuntu/my_script.py
